2021-03-15  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Don't run hook when
	evaluating customize-variable.
	(diredc-browse--exclude): Add buttons to describe-variable,
	customize-variable, and diredc-other-window.
	(diredc-browse--button-describe-action)
	(diredc-browse--button-return-action): Define actions for buttons created.

2021-03-14  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-exclude-helper): Add mimetype support,
	and exclusion rule for mimetype: binary.
	(diredc-browse--exclude): Quote shell variables.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--show-more-file-info)
	(diredc-show-more-file-info): Give user feedback when shut off.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Control window when
	maliciously deleted.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-exclude-file-extensions): Add entries
	for docx and db files.
	(diredc-browse--exclude): Handle filenames with no extensions.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--exclude): Update for Emacs 28
	compatability: deprecating when-let*.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-exclude-file-extensions)
	(diredc-browse-exclude-coding-systems)
	(diredc-browse-exclude-helper): New defcustoms.
	(diredc--guess-decoding, diredc-browse--exclude)
	(diredc-browse--hook-function): Use them.
	(diredc-browse-mode): Describe new feature in docstring.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell-list): Correct defcustom.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell--bufwin): Redefine and make unused variable useful.
	(diredc-shell-kill, diredc-shell): Use it, to return control to
	parent window unpoin buffer being killed.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>
